# autoresearch

./: .gitignore  README.md  eval_results.tsv  prepare.py  program.md  pyproject.toml  train.py
scripts/: clean_corpus.py  prepare_for_babylm_eval.py  reconstruct_corpus.py
